# claude-code-security

./: .gitignore  AUDIT_REPORT.md  README.md  pyproject.toml  setup.sh
claude_code_security/: __init__.py  approval_tokens.py  circuit_breaker.py  cluster_auth.py  cluster_pki.py  config.py  file_integrity.py  file_watcher.py  key_vault.py  redsage_analyzer.py  security_gate.py  self_modification_auditor.py  tamper_proof_log.py  tls_manager.py  token_vault.py
docs/: ARCHITECTURE.md  HOOKS_REFERENCE.md  TIER_GUIDE.md  TROUBLESHOOTING.md
hooks/: bash_safety_logger.py  damage_control_check.py  damage_control_patterns.yaml  permission_request.py  post_tool_use.py  pre_tool_use.py  security_orchestrator.py  session_start.py  task_completed_quality_gate.py  teammate_idle_quality_gate.py
templates/: CLAUDE-security-rules.md  custom_policies.json  settings-tier1.json  settings-tier2.json  settings-tier3.json  settings-tier4.json  threat_spec_fence.json
tests/: conftest.py  test_approval_tokens.py  test_cluster_auth.py  test_cluster_pki.py  test_file_integrity.py  test_file_watcher.py  test_key_vault.py  test_redsage_analyzer.py  test_security_gate.py  test_self_modification_auditor.py  test_tamper_proof_log.py  test_tls_manager.py  test_token_vault.py
