[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-security"
version = "1.0.0"
description = "Security hardening toolkit for Claude Code installations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "2 Acre Studios", email = "marc@2acrestudios.com"},
]

dependencies = []

[project.optional-dependencies]
crypto = ["cryptography>=41.0"]
watcher = ["watchdog>=3.0"]
all = ["cryptography>=41.0", "watchdog>=3.0"]
dev = [
    "cryptography>=41.0",
    "watchdog>=3.0",
    "pytest>=7.0",
    "pytest-timeout>=2.0",
]

[tool.setuptools.packages.find]
include = ["claude_code_security*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
